2015-06-13  Charlie Zender  <zender@uci.edu>

	* Modify routines to accept TempestRemap-generated maps

2015-06-11  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.0 release procedure:
 	Changes since nco-4.4.9: --map, --rnr=wgt, -A provenance, [date/time]_written, ncdismember
	cd ~/nco;git commit -a -m 'Version 4.5.0 release final changes'
	git tag -d 4.5.0;git push origin :refs/tags/4.5.0
	git tag -a 4.5.0 -m 'Version 4.5.0: Even Keel';git push --tags

	* Always cast latitudes to float before diagnosing grid type to	avoid failures with strangely-off grids

2015-06-10  Charlie Zender  <zender@uci.edu>

	* Make renormalize algorithm consider number of valid inputs when wgt_thr = 0.0, weight of valid inputs when wgt_thr > 0.0.

	* Reduce thr_nbr_max_fsh from 8 to 1 for ncwa stability with 4.5.0 release

	* Verify OpenMP with ncwa is flaky

	* Add nco_open_mem() prototype introduced in netCDF 4.4.0-rc1

	* NCO 4.5.0-beta9 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.0-beta9 final changes'
	git tag -a 4.5.0-beta9 -m 'Version 4.5.0-beta9 tag: --rnr, kvm clean-up, date_written/time_written handling';git push --tags

	* Complete --rnr/--rgr_rnr/--renormalization implementation

2015-06-09  Charlie Zender  <zender@uci.edu>

	* Implement infrastructure to renormalize destinations affected by missing values

	* Remove extraneous last character from history_of_appended_files

	* Do not attempt date_written/time_written update when var_sz != 8

	* Fix buffer overwrite in nco_xcp_prc(), and double-free caused by nco_rgr()

	* Allow allow all grid dimension/variable names to be command-line specified

	* Re-do rgr_nfo creation and destruction routines to facilitate	kvm arguments

	* Fix kvm infrastructure

2015-06-08  Charlie Zender  <zender@uci.edu>

	* Update time-stamps of date_written, time_written during all output

	* Document regridding

	* Change time-stamp update from localtime() to gmtime()

	* Broke kvm infrastructure by simplifying nco_sng2kvm() prototype